fix: remove wrap-instructor-info from here and add in ol-openedx-chat

--- a/lms/static/sass/partials/lms/theme/_extras.scss
+++ b/lms/static/sass/partials/lms/theme/_extras.scss
@@ -639,15 +639,7 @@ body.view-in-course {
     font-size: 18px !important;
 }
 }
-@media (min-width: 768px) {
-  .wrap-instructor-info {
-    display: flex !important;
-    flex-wrap: wrap;
-    gap: 10px;
-    width: 100%;
-    flex-shrink: 0;
-  }
-}
+
 .wrap-instructor-info .instructor-info-action {
   margin-left: 0px !important;
 }
